feat: add authorization snapshot concurrency
